# my_example_flutter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
docs/: .last_build_id  index.html  main.dart.js  version.json
my_example_flutter_documentation/: README.md  pubspec.yaml
my_example_flutter_documentation/android/app/: build.gradle
my_example_flutter_documentation/ios/Runner/: Info.plist
my_example_flutter_documentation/lib/: documentation_data.dart  documentation_main.dart
my_example_flutter_documentation/linux/: CMakeLists.txt  my_application.cc
my_example_flutter_documentation/macos/Runner.xcodeproj/: project.pbxproj
my_example_flutter_documentation/test/: widget_test.dart
my_example_flutter_documentation/web/: index.html  manifest.json
my_example_flutter_documentation/windows/: CMakeLists.txt
my_example_flutter_documentation/windows/runner/: Runner.rc  main.cpp
native_lib/: CMakeLists.txt  readme.md
package/my_example_flutter/: LICENSE  pubspec.yaml  pubspec_overrides.yaml
package/my_example_flutter/lib/: my_example_flutter.dart
package/my_example_flutter_android/: pubspec.yaml
package/my_example_flutter_apis/: pubspec.yaml
package/my_example_flutter_assets_flutter/: pubspec.yaml
package/my_example_flutter_cli/: README.md  pubspec.yaml
package/my_example_flutter_client/: pubspec.yaml
package/my_example_flutter_dart/: pubspec.yaml  pubspec_overrides.yaml
package/my_example_flutter_flutter/: pubspec.yaml
package/my_example_flutter_fucshia/: pubspec.yaml
package/my_example_flutter_ios/: pubspec.yaml
package/my_example_flutter_isar_scheme/: pubspec.yaml
package/my_example_flutter_linux/: pubspec.yaml
package/my_example_flutter_macos/: pubspec.yaml
package/my_example_flutter_scheme/: pubspec.yaml
package/my_example_flutter_server/: pubspec.yaml
package/my_example_flutter_web/: pubspec.yaml
package/my_example_flutter_windows/: pubspec.yaml
test/: my_example_flutter_test.dart
(+51 files in other folders)
